[gd_scene load_steps=20 format=3 uid="uid://c8duox5j3j38k"]

[ext_resource type="Script" uid="uid://dkjb2knr451ic" path="res://scripts/skeleton.gd" id="1_yag7t"]
[ext_resource type="Texture2D" uid="uid://dr2enshk27b54" path="res://sprites/Skeleton/Crumbling_Into_Bone_Pile (32 x 32).png" id="3_6hr2a"]
[ext_resource type="PackedScene" uid="uid://bujldwbx12021" path="res://entities/hitbox.tscn" id="4_4oc3b"]
[ext_resource type="Texture2D" uid="uid://rqe80ofxm5pp" path="res://sprites/Skeleton/formiga.png" id="4_j31jw"]
[ext_resource type="AudioStream" uid="uid://ydsquai4o4g3" path="res://sounds/kill_ant_sound.wav" id="7_tx6xw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xsvvn"]
atlas = ExtResource("3_6hr2a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oayfp"]
atlas = ExtResource("3_6hr2a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qj8h"]
atlas = ExtResource("3_6hr2a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sdy1"]
atlas = ExtResource("3_6hr2a")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu166"]
atlas = ExtResource("3_6hr2a")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lem8q"]
atlas = ExtResource("3_6hr2a")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp68x"]
atlas = ExtResource("3_6hr2a")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckyi2"]
atlas = ExtResource("4_j31jw")
region = Rect2(0, 0, 1984, 1984)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0uhi"]
atlas = ExtResource("4_j31jw")
region = Rect2(1984, 0, 1984, 1984)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qgbw"]
atlas = ExtResource("4_j31jw")
region = Rect2(3968, 0, 1984, 1984)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjous"]
atlas = ExtResource("4_j31jw")
region = Rect2(5952, 0, 1984, 1984)

[sub_resource type="SpriteFrames" id="SpriteFrames_yag7t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsvvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oayfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qj8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sdy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu166")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lem8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp68x")
}],
"loop": false,
"name": &"hurt",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckyi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0uhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qgbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjous")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0f01p"]
size = Vector2(14.999998, 5.833333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hr2a"]
size = Vector2(13.333333, 1)

[node name="skeleton" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(1.2, 1.2)
collision_layer = 4
collision_mask = 33
script = ExtResource("1_yag7t")

[node name="anim" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.01, 0.01)
sprite_frames = SubResource("SpriteFrames_yag7t")
animation = &"hurt"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(1.6666666, 1.6666666)
shape = SubResource("RectangleShape2D_0f01p")

[node name="wall_detector" type="RayCast2D" parent="."]
position = Vector2(2, 0)
target_position = Vector2(-9, 0)
collision_mask = 39
hit_from_inside = true

[node name="hitbox2" parent="." instance=ExtResource("4_4oc3b")]
position = Vector2(1, 0)

[node name="collision" type="CollisionShape2D" parent="hitbox2"]
position = Vector2(0.6666666, -2)
shape = SubResource("RectangleShape2D_6hr2a")
debug_color = Color(0.656833, 0, 0.16029218, 0.41960785)

[node name="die_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_tx6xw")
volume_db = -17.37

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
